@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 15:20:59 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 15:25:04 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -314,5 +314,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>韓江：諾貝爾獎之後，希望繼續寫作，與讀者見面...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 15:20:59 +0800</pubDate>
+</item><item>
+  <title>閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了</title>
+  <link>https://www.famechos.me/news/閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了.html</link>
+  <description>閔熙珍再度當選ADOR董事...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 15:25:04 +0800</pubDate>
 </item></channel>
 </rss>
