@@ -1,0 +1,264 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u9594\u7199\u73cd\u9006\u8f49\u52dd\uff01\u518d\u5ea6\u7576\u9078ADOR\u8463\u4e8b\uff0c\u8207\u6d77\u8b5c\u722d\u8b70\u672a\u4e86", "description": "\u9594\u7199\u73cd\u9006\u8f49\u52dd\uff01\u518d\u5ea6\u7576\u9078ADOR\u8463\u4e8b\uff0c\u8207\u6d77\u8b5c\u722d\u8b70\u672a\u4e86", "url": "https://www.famechos.me/news/\u9594\u7199\u73cd\u9006\u8f49\u52dd\uff01\u518d\u5ea6\u7576\u9078ADOR\u8463\u4e8b\uff0c\u8207\u6d77\u8b5c\u722d\u8b70\u672a\u4e86.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T15:24:44.062131+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了.html"/>
+<meta name="description" content="閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了。閔熙珍再次當選董事，引發爭議聲浪，與海譜之間的紛爭仍未解決。">
+
+<meta name="keywords" content="閔熙珍, 逆轉勝, ADOR董事, 海譜爭議, 閔熙珍再度當選">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了.html" />
+        <meta property="og:title" content="閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了" />
+        <meta property="og:description" content="閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了" />
+        <meta property="twitter:description" content="閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>據業界消息，前ADOR公司CEO閔熙珍於週四再度當選為公司董事，任期三年。這次董事選舉是在一次臨時股東大會上進行的，會議沒有其他議程。閔熙珍的新任期將於11月2日開始。</p>
+<p>上個月，董事會免去了閔熙珍的CEO職務，此前她與ADOR的母公司海譜（Hybe）有數月的爭議。海譜指控她試圖控制ADOR和其旗下組合NewJeans，但閔熙珍否認了這些指控。</p>
+<p>董事會後來提出了一個折衷方案，提議延長閔熙珍的董事任期，但不恢復她的CEO職務。然而，閔熙珍對這一決定提出異議，堅持她也應該恢復CEO職務。她上個月向法院申請了海譜重新任命她為CEO的禁令。</p>
+<p>在最近的一次日本電視台採訪中，閔熙珍強調了實現她為NewJeans制定的願景的必要性，即生產、投資和管理之間的協調。她還表達了她希望快速解決目前的模糊性並專注於組合未來項目的願望。</p>
+<p>閔熙珍表示：“我目前既不是製作人也不是CEO，我的角色很模糊，只有董事的權限。”</p>
+<p>韓國政府近日敦促朝鮮民主主義人民共和國（N.K.）立即從俄羅斯撤出其派遣的軍隊。韓國總統尹錫悅與北約秘書長進行了電話會議，討論了朝鮮民主主義人民共和國向俄羅斯派遣軍隊的問題。</p>
+<p>尹錫悅表示，朝鮮民主主義人民共和國的行動違反了國際法，破壞了地區的安全與穩定。韓國政府正在考慮派遣人員前往烏克蘭，以監測朝鮮民主主義人民共和國在當地的軍事活動。</p>
+<ul>
+<li>韓國政府敦促朝鮮民主主義人民共和國立即從俄羅斯撤軍</li>
+<li>韓國總統尹錫悅與北約秘書長進行了電話會議</li>
+<li>韓國政府考慮派遣人員前往烏克蘭監測朝鮮民主主義人民共和國軍事活動</li>
+</ul>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光.html">BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路.html">從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/SEVENTEEN世界巡迴演唱會「Right Here」首站高陽體育場盛大開幕 5萬8千名粉絲齊聚一堂.html">SEVENTEEN世界巡迴演唱會「Right Here」首站高陽體育場盛大開幕 5萬8千名粉絲齊聚一堂</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
