@@ -356,4 +356,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T15:25:04+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
