@@ -53,3 +53,4 @@ https://en.yna.co.kr/view/AEN20241017001052315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241017003400315?section=culture/k-pop&input=rss
 https://www.koreaherald.com/view.php?ud=20241020050138
 https://www.koreaherald.com/view.php?ud=20241014050581
+https://en.yna.co.kr/view/AEN20241017009151315?section=culture/k-pop&input=rss
